<?xml version="1.0" encoding="utf-8"?>
<!--
    Written and Developed by Inuwa Ibrahim - https://linktr.ee/Ibrajix
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_orange"
    android:padding="20dp"
    tools:context=".ui.activities.HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/profile_photo_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_comma"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.skydoves.transformationlayout.TransformationLayout
        android:id="@+id/transformationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:transformation_duration="550">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/ic_btn_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </com.skydoves.transformationlayout.TransformationLayout>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_helper"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/cabin_regular"
        android:textSize="12sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/transformationLayout"
        app:layout_constraintStart_toStartOf="@+id/transformationLayout"
        app:layout_constraintTop_toBottomOf="@+id/transformationLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>