<?xml version="1.0" encoding="utf-8"?>
<!--
    Written and Developed by Inuwa Ibrahim - https://linktr.ee/Ibrajix
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp"
    android:scrollbars="none"
    android:paddingBottom="20dp"
    android:fillViewport="true"
    tools:context=".ui.fragments.ContactFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/textView6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/cabin_bold"
           android:text="@string/contact"
           android:textColor="@color/black"
           android:textSize="18sp"
           android:textStyle="bold"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <TextView
           android:id="@+id/textView7"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="50dp"
           android:text="@string/contact_helper"
           android:textColor="@color/black"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView6" />

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_marginTop="50dp"
           android:layout_marginBottom="50dp"
           android:background="@color/white"
           android:paddingStart="70dp"
           android:paddingEnd="70dp"
           android:paddingTop="40dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView7"
           app:layout_constraintVertical_bias="0.0">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/lyt_email"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <ImageView
                   android:id="@+id/imageView4"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_email"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/email"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView4"
                   app:layout_constraintVertical_bias="0.0" />

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/lyt_twitter"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="@+id/lyt_email">

               <ImageView
                   android:id="@+id/imageView5"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_twitter"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="70dp"
                   android:layout_height="wrap_content"
                   android:text="@string/twitter"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   android:textAlignment="center"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView5"
                   app:layout_constraintVertical_bias="0.0" />

           </androidx.constraintlayout.widget.ConstraintLayout>


           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/lyt_instagram"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="50dp"
               app:layout_constraintStart_toStartOf="@+id/lyt_email"
               app:layout_constraintTop_toBottomOf="@+id/lyt_email">

               <ImageView
                   android:id="@+id/imageView6"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_ig"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/instagram"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView6"
                   app:layout_constraintVertical_bias="0.0" />

           </androidx.constraintlayout.widget.ConstraintLayout>


           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/lyt_youtube"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintEnd_toEndOf="@+id/lyt_twitter"
               app:layout_constraintStart_toStartOf="@+id/lyt_twitter"
               app:layout_constraintTop_toTopOf="@+id/lyt_instagram">

               <ImageView
                   android:id="@+id/imageView7"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_youtube"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="70dp"
                   android:layout_height="wrap_content"
                   android:text="@string/youtube"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   android:textAlignment="center"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView7"
                   app:layout_constraintVertical_bias="0.0" />

           </androidx.constraintlayout.widget.ConstraintLayout>


           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/lyt_github"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="50dp"
               app:layout_constraintEnd_toEndOf="@+id/lyt_instagram"
               app:layout_constraintStart_toStartOf="@+id/lyt_instagram"
               app:layout_constraintTop_toBottomOf="@+id/lyt_instagram">

               <ImageView
                   android:id="@+id/imageView8"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_github"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/github"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView8"
                   app:layout_constraintVertical_bias="0.0" />

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/lyt_medium"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintEnd_toEndOf="@+id/lyt_youtube"
               app:layout_constraintStart_toStartOf="@+id/lyt_youtube"
               app:layout_constraintTop_toTopOf="@+id/lyt_github">

               <ImageView
                   android:id="@+id/imageView9"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_medium"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="70dp"
                   android:layout_height="wrap_content"
                   android:text="@string/medium"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   android:textAlignment="center"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView9"
                   app:layout_constraintVertical_bias="0.0" />

           </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>